# geo_dist

./: CMakeLists.txt  README.md  geometric_distortion.h  main.cpp
test/: noisy_sphere100.pcd  sphere100.pcd
